0.04

0.03 2014-08-26T03:04:50+02:00
 - Add minimal version of Perl.
 - Add tests.

0.02 2014-08-20T09:05:16+02:00
 - Fix dependency to Class::Utils 0.06 version.

0.01 2014-08-20T07:36:40+02:00
 - First version.