@@ -31,7 +31,7 @@ BEGIN {
 	# This is not enforced yet, but will be some time in the next few
 	# releases once we can make sure it won't clash with custom
 	# Module::Install extensions.
-	$VERSION = '1.10';
+	$VERSION = '1.12';
 
 	# Storage for the pseudo-singleton
 	$MAIN    = undef;
@@ -467,7 +467,4 @@ sub _CLASS {
 
 1;
 
-
-__END__
-
-#line 485
+# Copyright 2008 - 2012 Adam Kennedy.
